tree/css/default.css
/* z-index stack
 05	#header
 07	#user
 10	#fader
 20	.popup
*/

*	{margin:0; padding:0}

body	{background:url(../img/decor/bg.gif)}
body, input, select	{font:normal 11px arial}
input	{padding:1px}
label input[type=checkbox], label input[type=radio]	{vertical-align:-2px; margin:0 2px 0 0}
select option	{padding:0 0 0 3px}

.hide	{display:none !important}
.float-l	{float:left}
.float-r	{float:right}

.button, .button div	{background:url(../img/decor/button-blue.png) no-repeat}
.button.alt, .button.alt div	{background-image:url(../img/decor/button-red.png)}
.button.sub, .button.sub div	{background-image:url(../img/decor/button-grey.png)}
.button	{background-position:100% 100%; padding:0 10px 0 0; display:inline-block; cursor:pointer; color:#fffefe; text-shadow:-1px 0 1px #000; font-family:trebuchet ms; font-size:14px; font-weight:bold}
.button div	{background-position:0 0; padding:0 0 0 10px; line-height:26px; text-align:center}

#header	{position:fixed; left:0; top:0; margin:0 5%; padding:12px 15px; width:90%; background:#fff; border-radius:0 0 10px 10px; box-shadow:0 0 8px #999; border:solid #ccc; border-width:0 1px 1px; box-sizing:border-box; -moz-box-sizing:border-box; z-index:5}
#header .caption	{font-size:18px; font-weight:bold; text-transform:uppercase; padding:0 0 10px}
#header .breadcrumb	{border-top:1px solid #ccc; line-height:24px; padding:5px 0 0}
#header .breadcrumb, #header .breadcrumb a	{color:#666; text-decoration:none}
#header .breadcrumb a:hover	{border-bottom:1px solid #999}
#header .breadcrumb span	{margin:0 2px; font-size:14px}
#header .button	{margin:0 10px 0 0}
#header .ico	{float:left; width:26px; height:26px; margin:12px 0 0 8px; cursor:pointer}
#header .home	{background:url(../img/icons/home.png)}
#header .print	{background:url(../img/icons/print.png)}
#header .settings	{background:url(../img/icons/settings-alt.png)}

#user	{position:fixed; width:300px; left:0; top:50%; margin:-195px 0 0; z-index:7}
#user .toggle	{width:34px; height:230px; position:absolute; right:-34px; top:50%; margin-top:-115px; cursor:pointer; background:#fff url(../img/icons/arrow-0.png) center no-repeat; border-radius:0 10px 10px 0; box-shadow:3px 0 3px #999}
#user .toggle	div	{border-left:1px solid #e5e5e5; width:100%; height:80%; position:relative; top:10%}
#user .print	{height:26px; width:26px; background:url(../img/icons/print.png); cursor:pointer; position:absolute; top:15px; right:15px}
#user .body	{padding:20px; background:#fff; overflow:hidden; height:350px; border-radius:0 10px 10px 0; box-shadow:0 0 10px #666}
#user .name	{font-size:14px; margin:0 0 10px}
#user .photo	{float:left; border:1px solid #d7d7d7; border-radius:1px; padding:2px; float:left; margin:0 10px 10px 0}
#user .photo img	{float:left; width:111px}
#user .birth	{color:#7f7f7f; margin:0 0 10px}
#user .family	{clear:both; font-size:11px}
#user .family th, #user .family td	{font-weight:normal; text-align:left; line-height:16px; padding:4px 12px 4px 0}
#user .family td b	{color:#2a86dc}

#user.closed	{left:-300px}
#user.closed > .toggle	{background-image:url(../img/icons/arrow-180.png)}

#viewpoint	{width:99999px; padding:200px 600px; overflow:hidden}
#viewpoint.drag	{cursor:move}
#viewpoint .family	{float:left; margin:60px 0 0}
#viewpoint .family canvas	{position:absolute; z-index:-1}
#viewpoint .family .children	{clear:both}

/* refactoring
.generation	{padding:30px 0}
.marriage	{display:inline-block}
*/

.person	{float:left; border:2px solid #9cd3ed; margin:0 30px; padding:8px 12px 0; width:130px; box-shadow:0 0 10px #ccc; background:#ecf9ff; text-align:center}
.person .relation	{color:#666; margin:0 20px 10px 0; height:14px; text-align:left}
.person .info	{cursor:pointer; width:16px; height:16px; float:right; background:url(../img/icons/info.png)}
.person .photo	{margin:0 0 10px; overflow:hidden; position:relative; display:inline-block; height:120px; overflow:hidden;}
.person .photo img	{ width:120px; display:block; margin:0 auto}
.person .photo.loading img	{visibility:hidden}
.person .photo .ribbon	{background:url(../img/decor/ribbon.png); width:58px; height:58px; position:absolute; right:-2px; bottom:-2px}
.person .name	{margin:0 0 8px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; text-align:left}
.person .name, .person .relation	{font-weight:bold}
.person .name, .person .actions	{color:#2a86dc}
.person .actions ul	{list-style:none; border-width:1px 0; border-style:solid; border-color:#c9d4d9; background:#fff; margin:0 -12px; line-height:16px; padding:5px 0; text-align:left}
.person .actions li	{padding:0 12px; cursor:pointer}
.person .actions li:hover	{text-decoration:underline}
.person .actions .toggle	{height:16px; background:url(../img/icons/arrow-90.png) center no-repeat; cursor:pointer}

.person .closed ul	{display:none}
.person .closed .toggle	{background-image:url(../img/icons/arrow-270.png); border-top:1px solid #c9d4d9}

.person .loading	{background:url(../img/decor/man.png) center no-repeat}
.person.alt .loading	{background-image:url(../img/decor/woman.png)}

.person.alt	{border-color:#f9a6a6; background:#fff7f7}

.fader	{position:fixed; left:0; top:0; width:100%; height:100%; background:#000; opacity:.7; z-index:10; filter:alpha(opacity=70)}

.popup, #actions	{position:absolute; z-index:20; left:0; top:0}

.popup	{background:#fff; border-radius:6px; box-shadow:0 0 10px #333; padding:0 20px; border:1px solid #ccc}
.popup, .popup input, .popup select	{font-size:12px}

.popup .close	{position:absolute; right:21px; top:0; background:url(../img/icons/cross.png); width:16px; height:16px; margin:6px -15px 0 0; cursor:pointer}
.popup .header	{padding:8px 16px 0 0; font-size:15px; border-bottom:1px solid #ccc; line-height:32px}
.popup .content	{padding:14px 0 15px}
.popup .footer	{padding:10px 0 0}
.popup .footer .button	{margin:0 16px 0 0}
.popup .footer .cancel	{color:#2a86dc; border-bottom:1px dashed #2a86dc; font-size:14px; font-weight:bold; cursor:pointer; display:inline-block; font-family:trebuchet ms}

.popup label	{margin:0 8px 0 0; display:inline-block; line-height:24px}
.popup input[type=text]	{width:165px; box-sizing:border-box; -moz-box-sizing:border-box}
.popup input[name=birthdate], .popup input[name=deathdate] {width:30px}
.popup input[name=birthyear], .popup input[name=deathyear] {width:40px}
.popup select	{margin:0 5px}
.popup label	{margin:0 5px 0 0}

.popup table	{border-collapse:collapse}
.popup th, .popup td	{line-height:21px; white-space:nowrap}
.popup th	{text-align:left; font-weight:normal; color:#666; padding:0 15px 0 0}

.personal th	{color:#000; font-weight:bold; line-height:28px}

.popup.center	{left:50%; top:50%; position:fixed}
*+html .popup .button	{float:left}
*+html .popup .cancel	{margin:4px 0 0}

#actions	{width:500px; margin-left:-200px}
#actions canvas	{position:absolute; left:0; top:0; z-index:-1}
#actions .person	{box-shadow:none; position:absolute}
#actions .button	{width:165px; float:left}
#actions .parents, #actions .children	{width:400px; height:45px; overflow:hidden}
#actions .parents .alt, #actions .children .alt	{float:right}
#actions .spouse, #actions .spouse .inner	{float:left}
#actions .siblings, #actions .siblings .inner	{float:right}
#actions .spouse .button	{float:left; clear:both; margin:8px 0 8px -100px}
#actions .siblings .button	{float:right; clear:both; margin:8px 0}
#actions .children .button	{margin:19px 0 0}
#actions.closed .parents,
#actions.closed .siblings,
#actions.closed .children,
#actions.closed canvas	{visibility:hidden}

